// ============================================================
// UTILITY BILLING SYSTEM â€” ERD for https://dbdiagram.io
// Copy everything below and paste into dbdiagram.io editor
// ============================================================

Project utility_billing_system {
  database_type: 'PostgreSQL'
  Note: '''
    WASAC/REG Utility Billing System
  '''
}

// -------------------- USERS & SECURITY --------------------

Table users {
  id bigint [pk, increment, note: 'Primary key']
  full_name varchar(100) [not null]
  email varchar(255) [not null, unique, note: 'Lowercase only, used as username']
  phone_number varchar(20) [not null, unique, note: 'Rwanda format']
  password varchar(255) [not null, note: 'BCrypt encrypted']
  status varchar(20) [not null, note: 'ACTIVE | INACTIVE']
  role varchar(30) [not null, note: 'ROLE_ADMIN | ROLE_OPERATOR | ROLE_FINANCE | ROLE_CUSTOMER']
  otp_code varchar(10) [null]
  otp_expiry timestamp [null]
  email_verified boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Indexes {
    email [unique, name: 'idx_users_email']
    phone_number [unique, name: 'idx_users_phone']
  }
}

Table jwt_blacklist {
  id bigint [pk, increment]
  token varchar(512) [not null, unique, note: 'Blacklisted JWT on logout']
  expiry timestamp [not null]

  Indexes {
    token [unique, name: 'idx_jwt_blacklist_token']
  }
}

// -------------------- CUSTOMERS & METERS --------------------

Table customers {
  id bigint [pk, increment]
  full_names varchar(120) [not null]
  national_id varchar(16) [not null, unique, note: '16-digit Rwanda National ID']
  email varchar(255) [not null, unique]
  phone_number varchar(20) [not null, unique]
  address varchar(255) [not null]
  status varchar(20) [not null, note: 'ACTIVE | INACTIVE']
  user_id bigint [null, ref: > users.id, note: 'Optional link to ROLE_CUSTOMER user']
  created_at timestamp [not null, default: `now()`]

  Indexes {
    national_id [unique, name: 'idx_customers_national_id']
    email [unique, name: 'idx_customers_email']
    phone_number [unique, name: 'idx_customers_phone']
  }
}

Table meters {
  id bigint [pk, increment]
  meter_number varchar(50) [not null, unique]
  meter_type varchar(20) [not null, note: 'WATER | ELECTRICITY']
  installation_date date [not null]
  status varchar(20) [not null, note: 'ACTIVE | INACTIVE']
  customer_id bigint [not null, ref: > customers.id]

  Indexes {
    meter_number [unique, name: 'idx_meters_meter_number']
    customer_id [name: 'idx_meters_customer']
  }
}

// -------------------- READINGS & TARIFFS --------------------

Table meter_readings {
  id bigint [pk, increment]
  meter_id bigint [not null, ref: > meters.id]
  previous_reading decimal(12,2) [not null]
  current_reading decimal(12,2) [not null, note: 'Must be > previous_reading']
  units_consumed decimal(12,2) [not null, note: 'Auto-calculated']
  reading_date date [not null]
  billing_month int [not null, note: '1-12']
  billing_year int [not null]
  created_by bigint [not null, ref: > users.id, note: 'ROLE_OPERATOR']
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (meter_id, billing_month, billing_year) [unique, name: 'uk_reading_meter_month_year']
    meter_id [name: 'idx_readings_meter']
    (billing_month, billing_year) [name: 'idx_readings_billing_period']
  }
}

Table tariffs {
  id bigint [pk, increment]
  meter_type varchar(20) [not null, note: 'WATER | ELECTRICITY']
  tariff_type varchar(10) [not null, note: 'FLAT | TIER']
  price_per_unit decimal(12,2) [not null]
  fixed_charge decimal(12,2) [not null]
  vat_percentage decimal(5,2) [not null]
  penalty_percentage decimal(5,2) [not null]
  version int [not null, note: 'Versioned tariffs']
  effective_from date [not null, note: 'Applies to future billing cycles']
  active boolean [not null, default: true]

  Indexes {
    (meter_type, active) [name: 'idx_tariffs_meter_type_active']
    (meter_type, version) [unique, name: 'uk_tariff_meter_version']
  }
}

// -------------------- BILLING & PAYMENTS --------------------

Table bills {
  id bigint [pk, increment]
  bill_number varchar(30) [not null, unique]
  customer_id bigint [not null, ref: > customers.id]
  meter_id bigint [not null, ref: > meters.id]
  reading_id bigint [not null, unique, ref: - meter_readings.id]
  amount_before_tax decimal(14,2) [not null]
  tax_amount decimal(14,2) [not null, note: 'VAT']
  penalty_amount decimal(14,2) [not null]
  total_amount decimal(14,2) [not null]
  amount_paid decimal(14,2) [not null, default: 0]
  outstanding_balance decimal(14,2) [not null]
  billing_month int [not null]
  billing_year int [not null]
  due_date date [not null]
  status varchar(20) [not null, note: 'PENDING | PARTIALLY_PAID | PAID | OVERDUE']
  generated_at timestamp [not null, default: `now()`]

  Indexes {
    bill_number [unique, name: 'idx_bills_bill_number']
    customer_id [name: 'idx_bills_customer']
    status [name: 'idx_bills_status']
  }
}

Table payments {
  id bigint [pk, increment]
  bill_id bigint [not null, ref: > bills.id]
  amount_paid decimal(14,2) [not null]
  payment_method varchar(20) [not null, note: 'CASH | MOBILE_MONEY | BANK_TRANSFER | CARD']
  payment_date date [not null]
  received_by bigint [not null, ref: > users.id, note: 'ROLE_FINANCE']
  transaction_reference varchar(80) [not null, unique]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    bill_id [name: 'idx_payments_bill']
    transaction_reference [unique, name: 'idx_payments_transaction_ref']
  }
}

// -------------------- NOTIFICATIONS --------------------

Table notifications {
  id bigint [pk, increment]
  customer_id bigint [not null, ref: > customers.id]
  message text [not null]
  sent_at timestamp [not null, default: `now()`]
  status varchar(20) [not null, note: 'PENDING | SENT | FAILED']

  Indexes {
    customer_id [name: 'idx_notifications_customer']
  }
}

// -------------------- RELATIONSHIP SUMMARY --------------------
// users 1 --- 0..1 customers (optional customer portal account)
// customers 1 --- * meters
// meters 1 --- * meter_readings
// meter_readings 1 --- 0..1 bills
// bills 1 --- * payments
// customers 1 --- * bills
// customers 1 --- * notifications
// users (operator) captures meter_readings
// users (finance) records payments
